--- a/additionalinformation.html
+++ b/additionalinformation.html
@@ -57,7 +57,7 @@
         <iframe class="center" width="640" height="362" src="https://www.youtube.com/embed/Bj9CJyx5xHM?si=bXyv-Q3UWY4zAZ3F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="video"></iframe>
         <div class="pheading"><br>
             <ol class="aboutbg custommarginlist center whitefont">
-                <li class="customli"> Layering Techniques
+                <li class="customli"> <span class="custombold customunderline">Layering Techniques</span>
                     <ul class="customul">
                         <li>
                             <span class="custombold">Glazing:</span> Applying thin layers of translucent paint to create depth and richness of color.
@@ -68,9 +68,9 @@
                         <li>
                             <span class="custombold">Impasto:</span> Applying thick layers of paint with a palette knife or brush to create a textured surface.
                         </li>
-                    </ul>
+                    </ul><br>
                 </li>
-                <li class="customli"> Texturing Techniques
+                <li class="customli"> <span class="custombold customunderline">Texturing Techniques</span>
                     <ul class="customul">
                         <li>
                             <span class="custombold">Sgraffito:</span> Scratching into wet paint to reveal the layers underneath, adding texture and detail.
@@ -81,9 +81,9 @@
                         <li>
                             <span class="custombold">Collage:</span> Incorporating various materials such as paper, fabric, or found objects into the painting to add dimension and texture.
                         </li>
-                    </ul>
+                    </ul><br>
                 </li>
-                <li class="customli"> Blending Techniques
+                <li class="customli"> <span class="custombold customunderline">Blending Techniques</span>
                     <ul class="customul">
                         <li>
                             <span class="custombold">Wet-on-Wet:</span> Applying wet paint onto a wet surface to blend colors seamlessly and create smooth transitions. 
@@ -107,7 +107,7 @@
         <div class="pheading">
             see how we are doing!
         </div>
-        <div class="center">
+        <div class="tableaublock">
             <div class='tableauPlaceholder' id='viz1712713061637' >
                 <noscript>
                     <a href='#'>
